--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.uri=http://localhost:8761/configserver
 spring.config.import=optional:configserver:http://localhost:8761/configserver
+
+springdoc.packagesToScan=com.wtd.client
+springdoc.pathsToMatch=/**
